--- a/index.html
+++ b/index.html
@@ -1,13 +1,74 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <base target="_top">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>เว็บแอป</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Installation Work Report</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbwQH9HWOwO9bXO6-JqzUIQqm-_rD8QrWSp2TB1IlniLMnLXDXlfA5Zbm1AqfhvhI2XA/exec" frameborder="0"></iframe>
+
+    <div class="container">
+        <h1>📝 บันทึกรายงานความคืบหน้างานติดตั้ง</h1>
+        <form id="reportForm">
+            <div class="form-grid">
+                <div class="form-group span-2">
+                    <label for="sectionTitleEN">Section Title (EN)</label>
+                    <input type="text" id="sectionTitleEN" required>
+                </div>
+                <div class="form-group span-2">
+                    <label for="sectionTitleCN">部分标题 (中文)</label>
+                    <input type="text" id="sectionTitleCN">
+                </div>
+                
+                <div class="form-group">
+                    <label for="descMorningEN">Description (Morning)</label>
+                    <textarea id="descMorningEN" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="descMorningCN">描述 (早晨)</label>
+                    <textarea id="descMorningCN" rows="3"></textarea>
+                </div>
+                <div class="form-group span-2 file-upload">
+                    <label for="imageMorning">Image (Morning)</label>
+                    <input type="file" id="imageMorning" accept="image/*">
+                    <img id="previewMorning" class="image-preview" src="#" alt="Preview">
+                </div>
+
+                <div class="form-group">
+                    <label for="descAfternoonEN">Description (Afternoon)</label>
+                    <textarea id="descAfternoonEN" rows="3"></textarea>
+                </div>
+                 <div class="form-group">
+                    <label for="descAfternoonCN">描述 (下午)</label>
+                    <textarea id="descAfternoonCN" rows="3"></textarea>
+                </div>
+                <div class="form-group span-2 file-upload">
+                    <label for="imageAfternoon">Image (Afternoon)</label>
+                    <input type="file" id="imageAfternoon" accept="image/*">
+                    <img id="previewAfternoon" class="image-preview" src="#" alt="Preview">
+                </div>
+
+                <div class="form-group span-4">
+                    <label for="remarks">Remarks / 备注</label>
+                    <textarea id="remarks" rows="3"></textarea>
+                </div>
+            </div>
+            
+            <button type="submit" id="submitButton">
+                <span class="button-text">💾 บันทึกข้อมูล</span>
+                <span class="loader" style="display: none;"></span>
+            </button>
+        </form>
+
+        <hr>
+
+        <h2>📊 รายงานความคืบหน้า</h2>
+        <div id="reportContainer">
+            <p>กำลังโหลดข้อมูล...</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
